fix color contrast ratio

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,7 +1,7 @@
 // Variables
 
 $brand-primary: #e8055f;
-$brand-gray: #a3a3a3;
+$brand-gray: #737373;
 
 $gray-dark: #404040;
 $gray-light: #bfbfbf;
